@@ -1,3 +1,4 @@
 #Properties file for org.eclipse.linuxtools.valgrind.core
 Bundle-Vendor.0 = Eclipse
 Bundle-Name.0 = Valgrind Core Plug-in (Incubation)
+page.name = Valgrind
