@@ -1,3 +1,10 @@
+2009-11-03  Elliott Baron  <ebaron@fedoraproject.org>
+
+	* plugin.properties: Externalized preference page name.
+	* plugin.xml: Likewise.
+	* src/org/eclipse/linuxtools/internal/valgrind/core/messages.properties: Externalized/edited strings.
+	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPreferencePage.java: Likewise.
+
 2009-08-11  Elliott Baron  <ebaron@redhat.com>
 
 	* META-INF/MANIFEST.MF: Bump version to 0.3.0.
